Clarify when ReParentStyleContext should be called and remove more bogus style parentage warnings.  Bug 217225, r+sr=dbaron