layout/base/nsFrameManager.cpp
@@ -1463,10 +1463,8 @@ FrameManager::ReParentStyleContext(nsIFrame* aFrame,
   NS_ENSURE_TRUE(mPresShell, NS_ERROR_NOT_AVAILABLE);
   nsresult result = NS_ERROR_NULL_POINTER;
   if (aFrame) {
-#ifdef NS_DEBUG
-    DebugVerifyStyleTree(aFrame);
-#endif
-
+    // DO NOT verify the style tree before reparenting.  The frame
+    // tree has already been changed, so this check would just fail.
     nsStyleContext* oldContext = aFrame->GetStyleContext();
     if (oldContext) {
       nsIPresContext *presContext = GetPresContext();
@@ -1529,7 +1527,7 @@ FrameManager::ReParentStyleContext(nsIFrame* aFrame,
               break;
             }
           }
-#ifdef NS_DEBUG
+#ifdef DEBUG
           VerifyStyleTree(GetPresContext(), aFrame, aNewParentContext);
 #endif
         }
